fox_F90_sources = [
  'sax/FoX_sax.f90',
  'wcml/m_wcml_metadata.F90',
  'fsys/fox_m_fsys_abort_flush.F90',
  'fsys/fox_m_fsys_realtypes.f90',
  'fsys/fox_m_fsys_count_parse_input.F90',
  'fsys/fox_m_fsys_format.F90',
  'fsys/fox_m_fsys_parse_input.F90',
  'fsys/fox_m_fsys_string.F90',
  'fsys/fox_m_fsys_string_list.F90',
  'fsys/fox_m_fsys_varstr.F90',
  'utils/fox_m_utils_mtprng.F90',
  'utils/fox_m_utils_uri.F90',
  'utils/fox_m_utils_uuid.F90',

  'common/m_common_charset.F90',
  'common/m_common_content_model.F90',
  'common/m_common_error.F90',
  'common/m_common_namecheck.F90',
  'common/m_common_element.F90',
  'common/m_common_attrs.F90',
  'common/FoX_common.F90',
  'common/m_common_buffer.F90',
  'fsys/fox_m_fsys_array_str.F90',
  'common/m_common_elstack.F90',
  'common/m_common_entities.F90',
  'common/m_common_notations.F90',
  'common/m_common_struct.F90',
  'common/m_common_entity_expand.F90',
  'common/m_common_io.F90',
  'common/m_common_namespaces.F90',

  'wxml/m_wxml_escape.F90',
  'wxml/m_wxml_core.F90',
  'wxml/m_wxml_overloads.F90',
  'wxml/FoX_wxml.f90',

  'wkml/m_wkml_lowlevel.F90',
  'wkml/m_wkml_chart.F90',
  'wkml/m_wkml_color_def.F90',
  'wkml/m_wkml_color.F90',
  'wkml/m_contours.F90',
  'wkml/m_wkml_styling.F90',
  'wkml/m_wkml_features.F90',
  'utils/FoX_utils.f90',
  'wkml/m_wkml_contours.F90',
  'wkml/m_wkml_core.F90',
  'wkml/m_wkml_coverage.F90',
  'wkml/FoX_wkml.f90',

  'wcml/m_wcml_stml.F90',
  'wcml/m_wcml_coma.F90',
  'wcml/m_wcml_core.F90',
  'wcml/m_wcml_geometry.F90',
  'wcml/m_wcml_lists.F90',
  'wcml/m_wcml_inputdec.F90',
  'wcml/m_wcml_lattice.F90',
  'wcml/m_wcml_molecule.F90',
  'wcml/m_wcml_parameter.F90',
  'wcml/m_wcml_property.F90',
  'wcml/FoX_wcml.f90',

  'sax/m_sax_xml_source.F90',
  'sax/m_sax_reader.F90',
  'sax/m_sax_types.F90',
  'sax/m_sax_tokenizer.F90',
  'sax/m_sax_parser.F90',
  'sax/m_sax_operate.F90',

  'dom/m_dom_error.f90',
  'dom/m_dom_dom.F90',
  'dom/m_dom_extras.F90',
  'dom/m_dom_parse.f90',
  'dom/m_dom_utils.f90',
  'dom/FoX_dom.f90',
]

fox = library('fox',
  fox_F90_sources,
  )
